--- a/nest/package.json
+++ b/nest/package.json
@@ -47,6 +47,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "json-2-csv": "^5.5.0",
+    "json2csv": "^6.0.0-alpha.2",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
